Add styles and change text

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,11 @@
 /* Variables */
 $vin-blue: #5bb7db;
-$vin-green: #60b044;
+$vin-green: #20c9b9;
 $vin-red: #ff0000;
 
 /* Styles */
 body {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font: 16px 'Helvetica Neue', Helvetica, Arial, sans-serif;
   line-height: 1.4em;
   color: #4d4d4d;
   min-width: 230px;
