--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,6 +2,8 @@
 $vin-blue: #5bb7db;
 $vin-green: #20c9b9;
 $vin-red: #ff0000;
+$text-size: 16px;
+$title-size: 1.3rem;
 
 /* Styles */
 body {
@@ -9,7 +11,7 @@ body {
   line-height: 1.4em;
   color: #4d4d4d;
   min-width: 230px;
-  max-width: 550px;
+  max-width: 720px;
   margin: 0 auto;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
@@ -20,8 +22,10 @@ body {
 td {
 	padding: 12px;
 }
-
-h2 {
+h1 {
+  size: $title-size;
+}
+h1, h2 {
 	color: $vin-blue;
 }
 
