--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,6 @@
 // External Imports
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
-@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+// @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 /* Variables */
 $vin-blue: #5bb7db;
@@ -28,7 +28,6 @@ td {
 }
 h1 {
   font-size: $title-size;
-  line-height: 1.4em;
 }
 h1, h2 {
 	color: $vin-green;
