Add real calculation based on J formula

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -33,7 +33,7 @@ h1, h2 {
 	color: $vin-green;
 }
 
-.savings { color: $vin-green; }
+.dclv { color: $vin-green; }
 .loss { color: $vin-red; }
 input.small { width: 46px; }
-td.fuel-savings-label { width: 175px; }
+td.dclv-label { width: 175px; }
